plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'com.gradleup.shadow' version '8.3.6'
}

version = mod_version
group = mod_group_id


subprojects {
    apply plugin: 'java-library'
    apply plugin: 'idea'
    apply plugin: 'net.neoforged.moddev'

    version = rootProject.mod_version
    group = rootProject.mod_group_id

    java.toolchain.languageVersion = JavaLanguageVersion.of(21)

    neoForge {
        version = rootProject.neo_version
        parchment {
            mappingsVersion = rootProject.parchment_mappings_version
            minecraftVersion = rootProject.parchment_minecraft_version
        }
        mods {
            "${mod_id}" {
                sourceSet(sourceSets.main)
            }
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url = 'https://maven.neoforged.net' }
    }

    dependencies {
        compileOnly 'org.slf4j:slf4j-api:2.0.16'
        implementation 'com.github.ben-manes.caffeine:caffeine:3.2.2'
    }

    apply plugin: 'maven-publish'

    publishing {
        publications {
            register("${project.name}Java", MavenPublication) {
                from components.java
                artifactId = "${rootProject.mod_id}-${project.name}"
            }
        }
    }
}



repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
        client { client() }
        server { server(); programArgument '--nogui' }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

dependencies {
    implementation project(':api')
    implementation project(':common')
    implementation project(':server')
    implementation project(':client')
    setupShade(it)
}

def setupShade(DependencyHandler handler) {
    handler.add('implementation', 'org.postgresql:postgresql:42.7.7')
    handler.add('implementation', 'com.zaxxer:HikariCP:5.0.1')
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


configurations {
    shade
    implementation.extendsFrom(shade)

    configureEach {
        exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
        resolutionStrategy {
            force 'org.slf4j:slf4j-api:2.0.16'
            force 'com.google.errorprone:error_prone_annotations:2.23.0'
        }
    }
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

shadowJar {
    archiveClassifier.set('')
    configurations = [project.configurations.runtimeClasspath]

    exclude 'com/google/errorprone/**'
    exclude 'org/checkerframework/**'
    exclude 'org/slf4j/**'

    relocate 'com.zaxxer.hikari', 'com.astaro.midmmo.shadow.hikari'
    relocate 'org.postgresql', 'com.astaro.midmmo.shadow.postgresql'
}

assemble.dependsOn(shadowJar)

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-exports',
            'org.slf4j/org.slf4j.spi=neoforge'
    ]
}
